<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.group20.pi_software.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.group20.pi_software.ui.summary.SummaryFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/navigation_trend"
        android:name="com.group20.pi_software.ui.trend.TrendFragment"
        android:label="@string/title_trend"
        tools:layout="@layout/fragment_trend" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.group20.pi_software.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.group20.pi_software.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/navigation_profile_details"
        android:name="com.group20.pi_software.ui.profileDetails.ProfileDetailsFragment"
        android:label="@string/title_prrofile_details"
        tools:layout="@layout/fragment_profile_details" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.group20.pi_software.ui.goals.GoalsFragment"
        android:label="@string/title_goal"
        tools:layout="@layout/fragment_goals" />

</navigation>